Added a favorite movie button that adds movie to DB and renders on a page

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -152,5 +152,29 @@ button {
     text-align: center;
 }
 
+.add-to-favorites-button {
+    background-color: black;
+    border: none;
+    color: white;
+    margin-left: auto;
+    padding: 0.7rem;
+}
+
+.add-to-favorites-button:hover {
+    background-color: white;
+    color: black;
+    cursor: pointer;
+}
+
+.favorite-movies-link {
+    float: right;
+    margin-top: 2rem;
+    padding-right: 1rem;
+}
+
+.web-title {
+    display: inline-block;
+    margin-bottom: 0;
+}
 
 
