Added Favorite Movies link to all pages

--- a/views/favorite-movies.ejs
+++ b/views/favorite-movies.ejs
@@ -1,6 +1,7 @@
 <%- include("header") -%>
 <div class="title-banner">
-    <h1>Movie Search</h1>
+    <h1 class="web-title">Movie Search</h1>
+    <a class="favorite-movies-link" href="/">Back to Search</a>
     
 </div>
 
