--- a/views/movie-error.ejs
+++ b/views/movie-error.ejs
@@ -2,7 +2,8 @@
 
 <body>
     <div class="title-banner">
-        <h1>Movie Search</h1>
+        <h1 class="web-title">Movie Search</h1>
+        <a class="favorite-movies-link" href="/favoritemovies">Favorite Movies</a>
     </div>
     <div class="search-section">
         <form action="/" method="POST">
