--- a/views/movies.ejs
+++ b/views/movies.ejs
@@ -1,8 +1,8 @@
 <%- include("header") -%>
 <body>
     <div class="title-banner">
-        <h1>Movie Search</h1>
-        <a href="/favoritemovies">Favorite Movies</a>
+        <h1 class="web-title">Movie Search</h1>
+        <a class="favorite-movies-link" href="/favoritemovies">Favorite Movies</a>
     </div>
 
     <div class="search-section">
