Session is now destroyed when user logs out

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,7 +2,11 @@
 <body>
     <div class="title-banner">
     <h1 class="web-title">Movie Search</h1>
-    <a class="favorite-movies-link" href="/favoritemovies">Favorite Movies</a>
+    <ul class="nav-links">
+    <a href="/favoritemovies">Favorite Movies</a>
+    <a href="/logout" ><%= log %></a>
+
+</ul>
     </div>
 
 <div class="search-section">
@@ -13,6 +17,7 @@
 </div>
 
 <%- include("footer") -%>
-    
+<script>
+    </script>
 </body>
 </html>
