--- a/views/movies.ejs
+++ b/views/movies.ejs
@@ -2,7 +2,11 @@
 <body>
     <div class="title-banner">
         <h1 class="web-title">Movie Search</h1>
-        <a class="favorite-movies-link" href="/favoritemovies">Favorite Movies</a>
+        <ul class="nav-links">
+        <a href="/favoritemovies">Favorite Movies</a>
+    <a href="/logout" ><%= log %></a>
+    </ul>
+        <!-- <a class="favorite-movies-link" href="/favoritemovies">Favorite Movies</a> -->
     </div>
 
     <div class="search-section">
